# LABA_3

./: CMakeLists.txt  base_matrix.h  complex.h  complex_print.h  diagonal_matrix.h  imatrix.h  imatrix_print.h  main.cpp  rectangle_matrix.h  sparse_matrix.h  square_matrix.h  systems_of_equations.h  triangle_matrix.h  vector.h  vector_print.h
LABA_2/: CMakeLists.txt  arraySequence.h  diagonal_matrix.h  dynamicArray.h  linkedList.h  listSequence.h  main.cpp  sequence.h
tests/: test_diagonal_matrix.cpp  test_rect_matrix.cpp  test_sparse_matrix.cpp  test_square_matrix.cpp  test_triangle_matrix.cpp  test_vector.cpp
